--- a/index.html
+++ b/index.html
@@ -2,44 +2,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Мемогенератор з реєстрацією</title>
+  <title>Мемогенератор</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    emailjs.init("IiBvbf7M-Aal7d0Q5")
+  </script>
 </head>
 <body>
-  <h1>🔐 Реєстрація</h1>
-  <div class="form">
-    <input type="text" id="regNick" placeholder="Нікнейм" />
-    <input type="password" id="regPass" placeholder="Пароль" />
-    <input type="email" id="regEmail" placeholder="Пошта" />
-    <button onclick="startVerification()">Надіслати код</button>
+  <div id="authSection">
+    <h1>🔐 Реєстрація</h1>
+    <div class="form">
+      <input type="text" id="regNick" placeholder="Нікнейм" />
+      <input type="password" id="regPass" placeholder="Пароль" />
+      <input type="email" id="regEmail" placeholder="Пошта" />
+      <button onclick="startVerification()">Надіслати код</button>
+    </div>
+
+    <div class="form" id="verifyBlock" style="display:none;">
+      <p>Введи код підтвердження:</p>
+      <input type="text" id="verifyCode" placeholder="Код" />
+      <button onclick="confirmCode()">Підтвердити</button>
+    </div>
   </div>
 
-  <div class="form" id="verifyBlock" style="display:none;">
-    <p>Введи код підтвердження:</p>
-    <input type="text" id="verifyCode" placeholder="Код" />
-    <button onclick="confirmCode()">Підтвердити</button>
+  <div id="mainSite" style="display:none;">
+    <h1>🎉 Мемогенератор</h1>
+    <div class="controls">
+      <input type="file" id="upload" accept="image/*" />
+      <input type="text" id="topText" placeholder="Верхній текст" />
+      <input type="text" id="bottomText" placeholder="Нижній текст" />
+      <input type="text" id="nickname" placeholder="Введи нікнейм" />
+      <button onclick="setUsername()">Зберегти нік</button>
+      <button id="generate">Створити мем</button>
+    </div>
+
+    <canvas id="canvas" width="500" height="500"></canvas>
+
+    <h2>🕒 Історія мемів</h2>
+    <div id="history"></div>
+
+    <h2>🎰 Рулетка мемів</h2>
+    <div id="roulette"></div>
+
+    <h2>🏆 Топ мемів тижня</h2>
+    <div id="topMemes"></div>
   </div>
-
-  <h1>🎉 Мемогенератор</h1>
-  <div class="controls">
-    <input type="file" id="upload" accept="image/*" />
-    <input type="text" id="topText" placeholder="Верхній текст" />
-    <input type="text" id="bottomText" placeholder="Нижній текст" />
-    <input type="text" id="nickname" placeholder="Введи нікнейм" />
-    <button onclick="setUsername()">Зберегти нік</button>
-    <button id="generate">Створити мем</button>
-  </div>
-
-  <canvas id="canvas" width="500" height="500"></canvas>
-
-  <h2>🕒 Історія мемів</h2>
-  <div id="history"></div>
-
-  <h2>🎰 Рулетка мемів</h2>
-  <div id="roulette"></div>
-
-  <h2>🏆 Топ мемів тижня</h2>
-  <div id="topMemes"></div>
 
   <script src="script.js"></script>
 </body>
