--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script>
-    emailjs.init("IiBvbf7M-Aal7d0Q5")
+    emailjs.init("IiBvbf7M-Aal7d0Q5") <!-- Твій Public Key -->
   </script>
 </head>
 <body>
