--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
 <head>
   <meta charset="UTF-8" />
@@ -13,7 +12,7 @@
       <input type="text" id="regNick" placeholder="Нікнейм" />
       <input type="password" id="regPass" placeholder="Пароль" />
       <input type="email" id="regEmail" placeholder="Пошта" />
-      <button onclick="registerUser()">Зареєструватись</button>
+      <button id="registerBtn" onclick="registerUser()">Зареєструватись</button>
     </div>
   </div>
 
@@ -42,4 +41,4 @@
 
   <script src="script.js"></script>
 </body>
-</html
+</html>
